--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,13 +6,26 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-  <main class="container mx-auto p-4">
-    <h1 class="text-3xl font-bold">
+<body class="container mx-auto p-4">
+  <main>
+    <h1 class="text-5xl font-bold my-3">
       {% block page_title %}{% endblock %}
     </h1>
-    {% block content %}
-    {% endblock %}
+    {% block content %}{% endblock %}
   </main>
+  <footer class="flex space-x-2 mt-3container mx-auto">
+    {% if currentMode != "index" %}
+      <a href="{{ url_for('index') }}" class="text-blue-400 underline hover:text-blue-600 hover:cursor-pointer">トップ</a>
+    {% endif %}
+    {% if currentMode != "create" %}
+      <a href="{{ url_for('create') }}" class="text-blue-400 underline hover:text-blue-600 hover:cursor-pointer">新規作成</a>
+    {% endif %}
+    {% if currentMode != "edit" %}
+      <a href="{{ url_for('edit') }}" class="text-blue-400 underline hover:text-blue-600 hover:cursor-pointer">編集</a>
+    {% endif %}
+    {% if currentMode != "quiz" %}
+      <a href="{{ url_for('quiz') }}" class="text-blue-400 underline hover:text-blue-600 hover:cursor-pointer">出題</a>
+    {% endif %}
+  </footer>
 </body>
 </html>
