--- a/app/templates/create_quiz.html
+++ b/app/templates/create_quiz.html
@@ -12,11 +12,11 @@
   <form method="POST" class="flex flex-col space-y-4 mb-3" action="{{ url_for('create_quiz') }}">
     <div>
       <label for="question" class="cursor-pointer">問題: </label>
-      <p><input type="text" name="question" id="question" class="outline-none px-2 py-1 border-2 border-black focus:border-blue-500 rounded-md w-52"></p>
+      <p><input type="text" name="question" id="question" class="outline-none px-2 py-1 border-2 border-black focus:border-blue-500 rounded-md w-52" required></p>
     </div>
     <div>
       <label for="answer" class="cursor-pointer">答え: </label>
-      <p><input type="text" name="answer" id="answer" class="outline-none px-2 py-1 border-2 border-black focus:border-blue-500 rounded-md w-52"></p>
+      <p><input type="text" name="answer" id="answer" class="outline-none px-2 py-1 border-2 border-black focus:border-blue-500 rounded-md w-52" required></p>
     </div>
 
     <p><button id="create" class="bg-blue-500 text-white px-4 py-2 rounded-md">作成</button></p>
