--- a/app/templates/create_quiz.html
+++ b/app/templates/create_quiz.html
@@ -19,7 +19,7 @@
       <p><input type="text" name="answer" id="answer" class="outline-none px-2 py-1 border-2 border-black focus:border-blue-500 rounded-md w-52" required></p>
     </div>
 
-    <p><button id="create" class="bg-blue-500 text-white px-4 py-2 rounded-md">作成</button></p>
+    <p><button id="create" class="bg-blue-500 text-white px-4 py-2 rounded-md cursor-pointer">作成</button></p>
   </form>
   {% block message %}
     {% if status == "error" %}
